# snake

./: .gitignore  README.md  build_action.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: README.md  build.yml  release.yml  test.yml
plugins/: OFFICIAL_PLUGINS.md  README.md
plugins/password_cracker/: manifest.json
plugins/plugin_template/: Cargo.toml  build.sh
plugins/plugin_template/src/: lib.rs
plugins/vulnerability_scanner/: manifest.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  traits.rs
src-tauri/src/command/: driver.rs  exec.rs  fs.rs  mod.rs  plugin.rs  session.rs  types.rs
src-tauri/src/crypto/: chacha20.rs  encryption.rs  factory.rs  key_exchange.rs  mod.rs  salsa20.rs  traits.rs
src-tauri/src/fs/: cache.rs  mod.rs  monitor.rs  operations.rs
src-tauri/src/net/: mod.rs  proxy.rs  stealth.rs  transport.rs
src-tauri/src/plugins/: api.rs  loader.rs  mod.rs  pentest.rs  protocols.rs  runtime.rs
src-tauri/src/session/: audit.rs  collaboration.rs  example.rs  heartbeat.rs  manager.rs  mod.rs  persistence.rs  proxy.rs  tests.rs  types.rs
src/components/: CommandExecutor.tsx  FileManager.tsx  Navbar.tsx  PluginManager.tsx  SessionManager.tsx  SessionWorkspace.tsx  WebshellGenerator.tsx
src/utils/: LanguageManager.ts  ThemeManager.tsx  i18n.ts
wordlists/: common_passwords.txt
