[package]
name = "security-assessment-platform"
version = "0.1.0"
description = "Authorized Security Assessment Platform"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "security_assessment_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# Cryptography
ring = "0.17"
argon2 = "0.5"
aes-gcm = "0.10"
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
rsa = "0.9"
chacha20poly1305 = "0.10"
salsa20 = "0.10"
sha2 = "0.10"

# Authentication
totp-rs = "5.4"
webauthn-rs = "0.5.2"

# Network operations
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Plugin system
wasmer = "4.2"
wasmer-wasi = "4.2"

# Configuration
config = "0.13"
toml = "0.8"

# Additional dependencies for traits
async-trait = "0.1"
rand = "0.8"

# Additional dependencies for modules
base64 = "0.21"
regex = "1.0"
shell-escape = "0.1"

